--- a/folium-maps/folim-maps1.ipynb
+++ b/folium-maps/folim-maps1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,24 +46,210 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nombre</th>\n",
+       "      <th>Edad</th>\n",
+       "      <th>Puntuación</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>25</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>María</td>\n",
+       "      <td>30</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Juan</td>\n",
+       "      <td>22</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ana</td>\n",
+       "      <td>35</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lily</td>\n",
+       "      <td>17</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Nombre  Edad  Puntuación\n",
+       "0  Pedro    25          85\n",
+       "1  María    30          90\n",
+       "2   Juan    22          88\n",
+       "3    Ana    35          78\n",
+       "4   Lily    17         100"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(df) # Solo para Jupyter Notebook en Standalone usar print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Podemos explorar los atributos de DataFrame\n",
+    "[Documentación de la librería](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Nombre  Edad  Puntuación\n",
-      "0  Pedro    25          85\n",
-      "1  María    30          90\n",
-      "2   Juan    22          88\n",
-      "3    Ana    35          78\n",
-      "4   Lily    17         100\n"
+      "15\n",
+      "False\n",
+      "Nombre        5\n",
+      "Edad          5\n",
+      "Puntuación    5\n",
+      "dtype: int64\n",
+      "0    Pedro\n",
+      "1    María\n",
+      "2     Juan\n",
+      "3      Ana\n",
+      "4     Lily\n",
+      "Name: Nombre, dtype: object\n",
+      "0    25\n",
+      "1    30\n",
+      "2    22\n",
+      "3    35\n",
+      "4    17\n",
+      "Name: Edad, dtype: int64\n",
+      "0     85\n",
+      "1     90\n",
+      "2     88\n",
+      "3     78\n",
+      "4    100\n",
+      "Name: Puntuación, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "print(df)"
+    "print(df.size)\n",
+    "print(df.empty)\n",
+    "print(df.count())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Podemos acceder a cada `Serie` dentro del `DataFrame`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    Pedro\n",
+      "1    María\n",
+      "2     Juan\n",
+      "3      Ana\n",
+      "4     Lily\n",
+      "Name: Nombre, dtype: object\n",
+      "------   ------   ------   ------   \n",
+      "0    25\n",
+      "1    30\n",
+      "2    22\n",
+      "3    35\n",
+      "4    17\n",
+      "Name: Edad, dtype: int64\n",
+      "------   ------   ------   ------   \n",
+      "0     85\n",
+      "1     90\n",
+      "2     88\n",
+      "3     78\n",
+      "4    100\n",
+      "Name: Puntuación, dtype: int64\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Nombre'])\n",
+    "print('------   ------   ------   ------   ')\n",
+    "print(df['Edad'])\n",
+    "print('------   ------   ------   ------   ')\n",
+    "print(df['Puntuación'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Para saber el tipo de dato que tenemos usamos la función `type()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(df['Puntuación']))\n",
+    "print(type(df))"
    ]
   }
  ],
