--- a/folium-maps/folim-maps1.ipynb
+++ b/folium-maps/folim-maps1.ipynb
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Para saber el tipo de dato que tenemos usamos la función `type()`"
+    "Para saber el tipo de dato que tenemos usamos la función `type()`"
    ]
   },
   {
@@ -250,6 +250,15 @@
    "source": [
     "print(type(df['Puntuación']))\n",
     "print(type(df))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "  \\int_0^\\infty \\frac{x^3}{e^x-1}\\,dx = \\frac{\\pi^4}{15}\n",
+    "$$"
    ]
   }
  ],
