Mapa con Folium

--- a/folium-maps/folium-maps1.ipynb
+++ b/folium-maps/folium-maps1.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -25,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = {\n",
-    "    'Nombre': ['Pedro', 'María', 'Juan', 'Ana', 'Lily','Andy'],\n",
-    "    'Edad': [25, 30, 22, 35,17,15],\n",
-    "    'Puntuación': [85, 90, 88, 78,100,25]\n",
+    "    'Nombre': ['Pedro', 'María', 'Juan', 'Ana', 'Lily','Andy', 'Roberto'],\n",
+    "    'Edad': [25, 30, 22, 35,17,15,30],\n",
+    "    'Puntuación': [85, 90, 88, 78,100,25,10]\n",
     "}\n",
     "df = pd.DataFrame(data)"
    ]
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -138,26 +139,44 @@
        "      <td>15</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Roberto</td>\n",
+       "      <td>30</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Nombre  Edad  Puntuación\n",
-       "0  Pedro    25          85\n",
-       "1  María    30          90\n",
-       "2   Juan    22          88\n",
-       "3    Ana    35          78\n",
-       "4   Lily    17         100\n",
-       "5   Andy    15          25"
+       "    Nombre  Edad  Puntuación\n",
+       "0    Pedro    25          85\n",
+       "1    María    30          90\n",
+       "2     Juan    22          88\n",
+       "3      Ana    35          78\n",
+       "4     Lily    17         100\n",
+       "5     Andy    15          25\n",
+       "6  Roberto    30          10"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "display(df) # Solo para Jupyter Notebook en Standalone usar print()"
+    "display(df) # Solo para Jupyter Notebook en Standalone usar print()\n",
+    "df.empty"
    ]
   },
   {
@@ -171,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "18\n"
+      "21\n"
      ]
     }
    ],
@@ -188,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -205,16 +224,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre        6\n",
-      "Edad          6\n",
-      "Puntuación    6\n",
+      "Nombre        7\n",
+      "Edad          7\n",
+      "Puntuación    7\n",
       "dtype: int64\n"
      ]
     }
@@ -225,29 +244,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Nombre  Edad  Puntuación\n",
-      "0  Pedro    25          85\n",
-      "1  María    30          90\n",
-      "2   Juan    22          88\n",
-      "3    Ana    35          78\n",
-      "4   Lily    17         100\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nombre</th>\n",
+       "      <th>Edad</th>\n",
+       "      <th>Puntuación</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Nombre, Edad, Puntuación]\n",
+       "Index: []"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(df.head())"
+    "display(df.head(0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -264,16 +311,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6, 3)"
+       "(7, 3)"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -315,38 +362,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>6.000000</td>\n",
-       "      <td>6.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>77.666667</td>\n",
+       "      <td>24.857143</td>\n",
+       "      <td>68.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>7.641989</td>\n",
-       "      <td>26.778101</td>\n",
+       "      <td>7.335498</td>\n",
+       "      <td>35.378901</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>15.000000</td>\n",
-       "      <td>25.000000</td>\n",
+       "      <td>10.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>18.250000</td>\n",
-       "      <td>79.750000</td>\n",
+       "      <td>19.500000</td>\n",
+       "      <td>51.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>23.500000</td>\n",
-       "      <td>86.500000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>85.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>28.750000</td>\n",
-       "      <td>89.500000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>89.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -359,23 +406,43 @@
       ],
       "text/plain": [
        "            Edad  Puntuación\n",
-       "count   6.000000    6.000000\n",
-       "mean   24.000000   77.666667\n",
-       "std     7.641989   26.778101\n",
-       "min    15.000000   25.000000\n",
-       "25%    18.250000   79.750000\n",
-       "50%    23.500000   86.500000\n",
-       "75%    28.750000   89.500000\n",
+       "count   7.000000    7.000000\n",
+       "mean   24.857143   68.000000\n",
+       "std     7.335498   35.378901\n",
+       "min    15.000000   10.000000\n",
+       "25%    19.500000   51.500000\n",
+       "50%    25.000000   85.000000\n",
+       "75%    30.000000   89.000000\n",
        "max    35.000000  100.000000"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe() # Estadística descriptiva de cada columna"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
    ]
   },
   {
@@ -387,19 +454,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    Pedro\n",
-      "1    María\n",
-      "2     Juan\n",
-      "3      Ana\n",
-      "4     Lily\n",
-      "5     Andy\n",
+      "0      Pedro\n",
+      "1      María\n",
+      "2       Juan\n",
+      "3        Ana\n",
+      "4       Lily\n",
+      "5       Andy\n",
+      "6    Roberto\n",
       "Name: Nombre, dtype: object\n",
       "------   ------   ------   ------   \n",
       "0    25\n",
@@ -408,6 +476,7 @@
       "3    35\n",
       "4    17\n",
       "5    15\n",
+      "6    30\n",
       "Name: Edad, dtype: int64\n",
       "------   ------   ------   ------   \n",
       "0     85\n",
@@ -416,6 +485,7 @@
       "3     78\n",
       "4    100\n",
       "5     25\n",
+      "6     10\n",
       "Name: Puntuación, dtype: int64\n"
      ]
     }
@@ -437,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -487,9 +557,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nombre</th>\n",
+       "      <th>Edad</th>\n",
+       "      <th>Puntuación</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pedro</td>\n",
+       "      <td>25</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>María</td>\n",
+       "      <td>30</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Juan</td>\n",
+       "      <td>22</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ana</td>\n",
+       "      <td>35</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lily</td>\n",
+       "      <td>17</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Andy</td>\n",
+       "      <td>15</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Roberto</td>\n",
+       "      <td>30</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Nombre  Edad  Puntuación\n",
+       "0    Pedro    25          85\n",
+       "1    María    30          90\n",
+       "2     Juan    22          88\n",
+       "3      Ana    35          78\n",
+       "4     Lily    17         100\n",
+       "5     Andy    15          25\n",
+       "6  Roberto    30          10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**************************************\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -553,18 +717,25 @@
        "      <td>15</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Roberto</td>\n",
+       "      <td>30</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Nombre  Edad  Puntuación\n",
-       "4   Lily    17         100\n",
-       "1  María    30          90\n",
-       "2   Juan    22          88\n",
-       "0  Pedro    25          85\n",
-       "3    Ana    35          78\n",
-       "5   Andy    15          25"
+       "    Nombre  Edad  Puntuación\n",
+       "4     Lily    17         100\n",
+       "1    María    30          90\n",
+       "2     Juan    22          88\n",
+       "0    Pedro    25          85\n",
+       "3      Ana    35          78\n",
+       "5     Andy    15          25\n",
+       "6  Roberto    30          10"
       ]
      },
      "metadata": {},
@@ -573,13 +744,15 @@
    ],
    "source": [
     "# Creamos una nueva variable y le asignamos el nombre df_sorted_puntos\n",
-    "df_sorted_puntos = df.sort_values(by='Puntuación', ascending=False) # Orden descendente (en columna 'Puntuación')\n",
+    "df_sorted_puntos = df.sort_values(by='Puntuación', ascending=False)\n",
+    "display(df)\n",
+    "print('**************************************')\n",
     "display(df_sorted_puntos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -622,6 +795,12 @@
        "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Roberto</td>\n",
+       "      <td>30</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Pedro</td>\n",
        "      <td>25</td>\n",
@@ -650,13 +829,14 @@
        "</div>"
       ],
       "text/plain": [
-       "  Nombre  Edad  Puntuación\n",
-       "3    Ana    35          78\n",
-       "1  María    30          90\n",
-       "0  Pedro    25          85\n",
-       "2   Juan    22          88\n",
-       "4   Lily    17         100\n",
-       "5   Andy    15          25"
+       "    Nombre  Edad  Puntuación\n",
+       "3      Ana    35          78\n",
+       "1    María    30          90\n",
+       "6  Roberto    30          10\n",
+       "0    Pedro    25          85\n",
+       "2     Juan    22          88\n",
+       "4     Lily    17         100\n",
+       "5     Andy    15          25"
       ]
      },
      "metadata": {},
@@ -680,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -688,18 +868,28 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Primer valor de la columna 'Puntuación': 100\n"
+      "Primer valor de la columna 'Puntuación': 100\n",
+      "Segundo valor de la columna 'Puntuación': 90\n",
+      "Ultimo valor de la columna 'Puntuación': 10\n",
+      "7\n"
      ]
     }
    ],
    "source": [
     "primer_valor_puntuacion = df_sorted_puntos['Puntuación'].iloc[0]\n",
-    "print(\"\\nPrimer valor de la columna 'Puntuación':\", primer_valor_puntuacion)"
+    "segundo_valor_puntuacion = df_sorted_puntos['Puntuación'].iloc[1]\n",
+    "\n",
+    "ultimo_valor_puntuacion = df_sorted_puntos['Puntuación'].iloc[len(df_sorted_puntos)-1]\n",
+    "print(\"\\nPrimer valor de la columna 'Puntuación':\", primer_valor_puntuacion)\n",
+    "print(\"Segundo valor de la columna 'Puntuación':\", segundo_valor_puntuacion)\n",
+    "print(\"Ultimo valor de la columna 'Puntuación':\", ultimo_valor_puntuacion)\n",
+    "\n",
+    "print(len(df_sorted_puntos)) # Length)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -737,11 +927,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('ejemplo.csv', index=False)"
+    "df.to_csv('df_original2.csv', index=False)"
    ]
   },
   {
@@ -754,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -820,18 +1010,25 @@
        "      <td>15</td>\n",
        "      <td>25</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Roberto</td>\n",
+       "      <td>30</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Nombre  Edad  Puntuación\n",
-       "0  Pedro    25          85\n",
-       "1  María    30          90\n",
-       "2   Juan    22          88\n",
-       "3    Ana    35          78\n",
-       "4   Lily    17         100\n",
-       "5   Andy    15          25"
+       "    Nombre  Edad  Puntuación\n",
+       "0    Pedro    25          85\n",
+       "1    María    30          90\n",
+       "2     Juan    22          88\n",
+       "3      Ana    35          78\n",
+       "4     Lily    17         100\n",
+       "5     Andy    15          25\n",
+       "6  Roberto    30          10"
       ]
      },
      "metadata": {},
@@ -840,7 +1037,7 @@
    ],
    "source": [
     "# Creamos una nueva variable:\n",
-    "df_from_csv = pd.read_csv('ejemplo.csv')\n",
+    "df_from_csv = pd.read_csv('df_original2.csv')\n",
     "\n",
     "# Lo mostramos en pantalla\n",
     "display(df_from_csv)"
